# obsidian-cli-mcp

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  cli.py  fs_server.py  pyproject.toml  server.py
.agent/workflows/: team-dev.md
tests/: test_cli.py  test_frontmatter.py  test_fs_features_integration.py  test_fs_full_integration.py  test_fs_move.py  test_fs_tasks.py  test_server_tools.py
